plugin de screenshots añadido y funcional

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
+		<button  id="captura" type="button" >Screenshot</button>
+		<p id="demo" onclick="makeScreenshot()" >Guarda una screenshot en Pictures</p>
+
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
